--- a/.github/workflows/api-poi-ci.yml
+++ b/.github/workflows/api-poi-ci.yml
@@ -5,3 +5,22 @@ on:
     branches: [ main ]
     paths:
       - 'apis/poi/**'
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 2.1.x
+        
+    - name: restore
+      run: dotnet restore apis/poi/poi.sln
+      
+      
+    - name: build 
+      run: dotnet build --no-restore apis/poi/poi.sln   
