--- a/.github/workflows/api-poi-ci.yml
+++ b/.github/workflows/api-poi-ci.yml
@@ -24,3 +24,6 @@ jobs:
       
     - name: build 
       run: dotnet build --no-restore apis/poi/poi.sln   
+
+    - name: Test
+      run: dotnet test --no-build --verbosity normal -r testresults --logger "trx" apis/poi/poi.sln
