--- a/.github/workflows/api-poi-ci.yml
+++ b/.github/workflows/api-poi-ci.yml
@@ -27,3 +27,11 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal -r testresults --logger "trx" apis/poi/poi.sln
+      
+    - name: API POI Tests Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()  # run this step even if previous step failed
+      with:
+        name: API POI Tests       # Name of the check run which will be created
+        path: apis/poi/tests/UnitTests/testresults/*.trx,apis/poi/tests/IntegrationTests/testresults/*.trx   #Path to test results
+        reporter: dotnet-trx      #Reporter
