--- a/.github/workflows/api-poi-ci.yml
+++ b/.github/workflows/api-poi-ci.yml
@@ -35,3 +35,13 @@ jobs:
         name: API POI Tests       # Name of the check run which will be created
         path: apis/poi/tests/UnitTests/testresults/*.trx,apis/poi/tests/IntegrationTests/testresults/*.trx   #Path to test results
         reporter: dotnet-trx      #Reporter
+
+#Opens An Issue Only When CI Fails
+    
+    - uses: actions/github-script@0.9.0
+      if: failure()
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+          github.issues.create
