--- a/.github/workflows/api-poi-cd.yml
+++ b/.github/workflows/api-poi-cd.yml
@@ -19,7 +19,10 @@ on:
         description: 'Reason'
         required: true
         default: 'N/A'
-        
+      imagetag: 
+        description: 'imagen a desplegar'
+        required: true
+              
 jobs: 
     deploy_staging: 
       runs-on: ubuntu-latest
@@ -36,6 +39,6 @@ jobs:
             app-name: ${{ env.webapp_name }}
             slot-name: staging
               #images: openhackxqzxmauhbxtiiacr.azurecr.io/devopsoh/api-poi:7
-            images: ${{ env.registry }}/${{ env.repository }}:${{github.run_number}} 
+            images: ${{ env.registry }}/${{ env.repository }}:${{ github.event.inputs.imagetag }} 
 
 
