--- a/.github/workflows/api-poi-ci.yml
+++ b/.github/workflows/api-poi-ci.yml
@@ -76,4 +76,4 @@ jobs:
           workflow: api-poi-cd
           #Este token hay que crearlo no es un secreto del workflow, leer: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           token: ${{ secrets.ACTIONS_PAT }}
-          inputs: '{ "reason": "Fired by .NET POI CI Worflow.", "imagetag":${{github.run_number}} }'
+          inputs: '{ "reason": "Fired by .NET POI CI Worflow.", "imagetag":"${{github.run_number}}" }'
