--- a/.github/workflows/api-poi-cd.yml
+++ b/.github/workflows/api-poi-cd.yml
@@ -41,7 +41,7 @@ jobs:
               #images: openhackxqzxmauhbxtiiacr.azurecr.io/devopsoh/api-poi:7
             images: ${{ env.registry }}/${{ env.repository }}:${{ github.event.inputs.imagetag }} 
           
-        - name: Web Validate
+        - name: Staging Web Validate
           env:
             URL: ${{ env.staging_url }}
           run: |
@@ -62,6 +62,36 @@ jobs:
                 title: "${{ env.build_name }} Workflow ${{ github.run_number }} Staging Web Test Failed! ",
                 body: body
               });
-              
+
+    swap_staging_prod: 
+      runs-on: ubuntu-latest
+      
+      steps:
         - name: slot swap / stagging production
           run: az webapp deployment slot swap  -g rgopenhackdevops20 -n openhackdevopsapp-poi-0x001 --slot staging --target-slot production
+
+        - name: Prod Web Validate
+          env:
+            URL: ${{ env.prod_url }}
+          run: |
+              sleep 60
+              res=$(curl -s -w "%{http_code}" -o resp.txt "$URL"/api/healthcheck/poi); if [ $res -eq 200 ]; then echo "HTTP:"$res; else exit $res; fi
+              cat resp.txt
+              if grep -q "Healthy" resp.txt ; then echo "API POI Healthy"; else exit 2; fi
+              
+        - name: ROLLBACK :( - Slot swap / production stagging
+          if: failure()
+          run: az webapp deployment slot swap  -g rgopenhackdevops20 -n openhackdevopsapp-poi-0x001 --slot staging --target-slot production              
+
+        - uses: actions/github-script@0.9.0
+          if: failure()
+          with:
+            github-token: ${{secrets.GITHUB_TOKEN}}
+            script: |
+              let body = "${{ env.build_name }} Worflow Production Web Test Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+              github.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: "${{ env.build_name }} Workflow ${{ github.run_number }} FALLÓ EL Web Test EN PRODUCIÓN!!!!!! ",
+                body: body
+              });
